--- a/package.json
+++ b/package.json
@@ -69,12 +69,14 @@
     "jbox": "^1.3.2",
     "jquery": "^3.6.0",
     "normalize.css": "^8.0.1",
+    "nouislider": "^15.5.0",
     "parsleyjs": "^2.9.2",
     "rellax": "^1.12.1",
     "scrollmagic": "^2.0.8",
     "select2": "^4.0.13",
     "swiper": "^6.6.1",
     "tippy.js": "^6.2.5",
-    "velocity-animate": "^1.5.2"
+    "velocity-animate": "^1.5.2",
+    "wnumb": "^1.2.0"
   }
 }
