--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "aos": "^2.3.4",
     "browser-detect": "^0.2.28",
     "gsap": "^3.6.1",
+    "inputmask": "^5.0.6",
     "jbox": "^1.3.2",
     "jquery": "^3.6.0",
     "normalize.css": "^8.0.1",
